update j2cl to v20260527
Signed-off-by: Dmitrii Tikhomirov <chani.liet@gmail.com>