@@ -23,8 +23,6 @@ import com.google.common.collect.ImmutableMap;
 import com.google.j2cl.common.SourcePosition;
 import com.google.j2cl.transpiler.ast.ArrayLiteral;
 import com.google.j2cl.transpiler.ast.ArrayTypeDescriptor;
-import com.google.j2cl.transpiler.ast.BinaryExpression;
-import com.google.j2cl.transpiler.ast.Block;
 import com.google.j2cl.transpiler.ast.DeclaredTypeDescriptor;
 import com.google.j2cl.transpiler.ast.Expression;
 import com.google.j2cl.transpiler.ast.Field;
@@ -84,12 +82,12 @@ public class AddEnumImplicitMethods extends NormalizationPass {
     FieldDescriptor namesToValuesMapFieldDescriptor =
         getNamesToValuesMapFieldDescriptor(typeDescriptor);
     enumType.addMember(
-        Field.Builder.from(namesToValuesMapFieldDescriptor)
+        Field.builderFrom(namesToValuesMapFieldDescriptor)
             .setSourcePosition(enumType.getSourcePosition())
             .build());
 
     Variable nameParameter =
-        Variable.newBuilder()
+        Variable.builder()
             .setName("name")
             .setTypeDescriptor(TypeDescriptors.get().javaLangString.toNonNullable())
             .setParameter(true)
@@ -97,39 +95,36 @@ public class AddEnumImplicitMethods extends NormalizationPass {
 
     // if (namesToValuesMap == null)
     Statement ifStatement =
-        IfStatement.newBuilder()
+        IfStatement.builder()
             .setSourcePosition(sourcePosition)
             .setConditionExpression(
-                FieldAccess.Builder.from(namesToValuesMapFieldDescriptor).build().infixEqualsNull())
+                FieldAccess.builderFrom(namesToValuesMapFieldDescriptor).build().infixEqualsNull())
             .setThenStatement(
-                Block.newBuilder()
-                    .setSourcePosition(sourcePosition)
-                    //   namesToValuesMap = createMapFromValues(this.values());
-                    .setStatements(
-                        BinaryExpression.Builder.asAssignmentTo(namesToValuesMapFieldDescriptor)
-                            .setRightOperand(
-                                RuntimeMethods.createEnumsCreateMapFromValuesMethodCall(
-                                    MethodCall.Builder.from(
-                                            typeDescriptor.getMethodDescriptor(VALUES_METHOD_NAME))
-                                        .build()))
-                            .build()
-                            .makeStatement(sourcePosition))
-                    .build())
+                //   namesToValuesMap = createMapFromValues(this.values());
+                FieldAccess.builderFrom(namesToValuesMapFieldDescriptor)
+                    .build()
+                    .infixAssign(
+                        RuntimeMethods.createEnumsCreateMapFromValuesMethodCall(
+                            MethodCall.builderFrom(
+                                    typeDescriptor.getMethodDescriptor(VALUES_METHOD_NAME))
+                                .build()))
+                    .makeStatement(sourcePosition)
+                    .ensureBlock())
             .build();
 
     // return getValueFromNameAndMap(name, namesToValuesMap);
     Statement returnStatement =
-        ReturnStatement.newBuilder()
+        ReturnStatement.builder()
             .setExpression(
                 RuntimeMethods.createEnumsGetValueFromNameAndMapMethodCall(
                     typeDescriptor,
                     nameParameter.createReference(),
-                    FieldAccess.Builder.from(namesToValuesMapFieldDescriptor).build()))
+                    FieldAccess.builderFrom(namesToValuesMapFieldDescriptor).build()))
             .setSourcePosition(sourcePosition)
             .build();
 
     enumType.addMember(
-        Method.newBuilder()
+        Method.builder()
             .setMethodDescriptor(
                 typeDescriptor.getMethodDescriptor(
                     MethodDescriptor.VALUE_OF_METHOD_NAME, TypeDescriptors.get().javaLangString))
@@ -141,7 +136,7 @@ public class AddEnumImplicitMethods extends NormalizationPass {
 
   private FieldDescriptor getNamesToValuesMapFieldDescriptor(
       DeclaredTypeDescriptor enumTypeDescriptor) {
-    return FieldDescriptor.newBuilder()
+    return FieldDescriptor.builder()
         .setEnclosingTypeDescriptor(enumTypeDescriptor)
         .setName(NAMES_TO_VALUES_MAP_FIELD_NAME)
         .setTypeDescriptor(getEnumMapTypeDescriptor(enumTypeDescriptor.toNonNullable()))
@@ -157,7 +152,7 @@ public class AddEnumImplicitMethods extends NormalizationPass {
             .getMethodDescriptorByName(CREATE_MAP_METHOD_NAME);
     // There should be 1 type variable. It should be specialized to the enum type.
     TypeVariable enumTypeVariable =
-        createMapMethodDescriptor.getTypeParameterTypeDescriptors().get(0);
+        createMapMethodDescriptor.getTypeParameterTypeDescriptors().getFirst();
     return createMapMethodDescriptor
         .getReturnTypeDescriptor()
         .specializeTypeVariables(
@@ -180,22 +175,22 @@ public class AddEnumImplicitMethods extends NormalizationPass {
     // Create method body.
     ImmutableList<Expression> values =
         enumType.getEnumFields().stream()
-            .map(enumField -> FieldAccess.Builder.from(enumField.getDescriptor()).build())
+            .map(enumField -> FieldAccess.builderFrom(enumField.getDescriptor()).build())
             .collect(toImmutableList());
 
     ArrayTypeDescriptor arrayTypeDescriptor =
-        ArrayTypeDescriptor.newBuilder()
+        ArrayTypeDescriptor.builder()
             .setComponentTypeDescriptor(enumType.getTypeDescriptor().toNonNullable())
             .build();
 
     enumType.addMember(
-        Method.newBuilder()
+        Method.builder()
             .setMethodDescriptor(
                 enumType.getTypeDescriptor().getMethodDescriptor(VALUES_METHOD_NAME))
             .addStatements(
-                ReturnStatement.newBuilder()
+                ReturnStatement.builder()
                     .setExpression(
-                        ArrayLiteral.newBuilder()
+                        ArrayLiteral.builder()
                             .setTypeDescriptor(arrayTypeDescriptor)
                             .setValueExpressions(values)
                             .build())
