@@ -126,14 +126,14 @@ public class ConvertMethodReferencesToLambdas extends NormalizationPass {
       // reference appears, so here we introduce a temporary variable to store the evaluated
       // qualifier.
       Variable variable =
-          Variable.newBuilder()
+          Variable.builder()
               .setFinal(true)
               .setName("$$q")
               .setTypeDescriptor(qualifier.getTypeDescriptor())
               .build();
       // Declare the temporary variable and initialize to the evaluated qualifier.
       result.add(
-          VariableDeclarationExpression.newBuilder()
+          VariableDeclarationExpression.builder()
               .addVariableDeclaration(variable, qualifier)
               .build());
       // Use the newly introduced variable as a qualifier when forwarding the call within the
@@ -150,7 +150,7 @@ public class ConvertMethodReferencesToLambdas extends NormalizationPass {
             referencedMethodDescriptor,
             false));
 
-    return MultiExpression.newBuilder().setExpressions(result).build();
+    return MultiExpression.builder().setExpressions(result).build();
   }
 
   /**
@@ -168,9 +168,8 @@ public class ConvertMethodReferencesToLambdas extends NormalizationPass {
     // Remove type parameters for the JsFunction method to avoid introducing them in the parameters
     // of the lambda expression. That is done because the type for functions in Closure can not
     // define templates.
-    MethodDescriptor jsFunctionMethodDescriptor = functionalMethodDescriptor;
     List<Variable> parameters =
-        AstUtils.createParameterVariables(jsFunctionMethodDescriptor.getParameterTypeDescriptors());
+        AstUtils.createParameterVariables(functionalMethodDescriptor.getParameterTypeDescriptors());
 
     // Does the method reference have a qualifier? I.e., the qualifier is not null and is not a
     // class name (modeled as a JsConstructorReference). Used in unqualified instance
@@ -192,7 +191,7 @@ public class ConvertMethodReferencesToLambdas extends NormalizationPass {
           parameters.size() == targetMethodDescriptor.getParameterTypeDescriptors().size() + 1
               || (parameters.size() >= targetMethodDescriptor.getParameterTypeDescriptors().size()
                   && targetMethodDescriptor.isVarargs()));
-      qualifier = parameters.get(0).createReference();
+      qualifier = parameters.getFirst().createReference();
       forwardedArguments =
           parameters.stream().skip(1).map(Variable::createReference).collect(toImmutableList());
     } else if (!needsQualifier && hasQualifier) {
@@ -226,7 +225,7 @@ public class ConvertMethodReferencesToLambdas extends NormalizationPass {
             isStaticDispatch,
             forwardedArguments,
             functionalMethodDescriptor.getReturnTypeDescriptor());
-    return FunctionExpression.newBuilder()
+    return FunctionExpression.builder()
         .setTypeDescriptor(expressionTypeDescriptor)
         .setJsAsync(targetMethodDescriptor.isJsAsync() || functionalMethodDescriptor.isJsAsync())
         .setParameters(parameters)
@@ -258,17 +257,17 @@ public class ConvertMethodReferencesToLambdas extends NormalizationPass {
             == parameters.size());
 
     NewInstance instantiation =
-        NewInstance.Builder.from(targetConstructorMethodDescriptor)
+        NewInstance.builderFrom(targetConstructorMethodDescriptor)
             .setQualifier(qualifier)
             .setArguments(
                 parameters.stream().map(Variable::createReference).collect(toImmutableList()))
             .build();
 
-    return FunctionExpression.newBuilder()
+    return FunctionExpression.builder()
         .setTypeDescriptor(functionalMethodDescriptor.getEnclosingTypeDescriptor())
         .setParameters(parameters)
         .setStatements(
-            ReturnStatement.newBuilder()
+            ReturnStatement.builder()
                 .setExpression(instantiation)
                 .setSourcePosition(sourcePosition)
                 .build())
@@ -304,13 +303,13 @@ public class ConvertMethodReferencesToLambdas extends NormalizationPass {
             .addAll(AstUtils.createListOfNullValues(arrayType.getDimensions() - 1))
             .build();
 
-    return FunctionExpression.newBuilder()
+    return FunctionExpression.builder()
         .setTypeDescriptor(targetFunctionalMethodDescriptor.getEnclosingTypeDescriptor())
         .setParameters(parameter)
         .setStatements(
-            ReturnStatement.newBuilder()
+            ReturnStatement.builder()
                 .setExpression(
-                    NewArray.newBuilder()
+                    NewArray.builder()
                         .setTypeDescriptor(arrayType)
                         .setDimensionExpressions(dimensionExpressions)
                         .build())
