@@ -78,7 +78,7 @@ public class NormalizeCatchClauses extends NormalizationPass {
             if (statement.getCatchClauses().isEmpty()) {
               return statement;
             }
-            return TryStatement.newBuilder()
+            return TryStatement.builder()
                 .setSourcePosition(statement.getSourcePosition())
                 .setResourceDeclarations(statement.getResourceDeclarations())
                 .setBody(statement.getBody())
@@ -92,22 +92,19 @@ public class NormalizeCatchClauses extends NormalizationPass {
   private static CatchClause mergeClauses(List<CatchClause> clauses) {
     checkArgument(!clauses.isEmpty());
 
-    SourcePosition sourcePosition = clauses.get(0).getBody().getSourcePosition();
+    SourcePosition sourcePosition = clauses.getFirst().getBody().getSourcePosition();
     // Create a temporary exception variable.
     Variable exceptionVariable =
-        Variable.newBuilder()
+        Variable.builder()
             .setName("__$exc")
             .setTypeDescriptor(TypeDescriptors.get().javaLangThrowable)
             .build();
 
     Statement body = bodyBuilder(sourcePosition, clauses, exceptionVariable);
-    return CatchClause.newBuilder()
+    return CatchClause.builder()
         .setExceptionVariable(exceptionVariable)
         .setBody(
-            Block.newBuilder()
-                .setSourcePosition(body.getSourcePosition())
-                .setStatements(body)
-                .build())
+            Block.builder().setSourcePosition(body.getSourcePosition()).setStatements(body).build())
         .build();
   }
 
@@ -117,18 +114,14 @@ public class NormalizeCatchClauses extends NormalizationPass {
       Variable exceptionVariable) {
     // Base case. If no more clauses left the last statement throws the exception.
     if (clauses.isEmpty()) {
-      Statement noMatchThrowException =
-          ThrowStatement.newBuilder()
-              .setSourcePosition(firstClauseSourcePosition)
-              .setExpression(exceptionVariable.createReference())
-              .build();
-      return Block.newBuilder()
+      return ThrowStatement.builder()
           .setSourcePosition(firstClauseSourcePosition)
-          .setStatements(noMatchThrowException)
-          .build();
+          .setExpression(exceptionVariable.createReference())
+          .build()
+          .ensureBlock();
     }
 
-    CatchClause clause = clauses.get(0);
+    CatchClause clause = clauses.getFirst();
     Variable catchVariable = clause.getExceptionVariable();
 
     TypeDescriptor exceptionTypeDescriptor = catchVariable.getTypeDescriptor();
@@ -144,7 +137,7 @@ public class NormalizeCatchClauses extends NormalizationPass {
       return transformedCatchBody;
     }
 
-    return IfStatement.newBuilder()
+    return IfStatement.builder()
         .setSourcePosition(clause.getBody().getSourcePosition())
         .setConditionExpression(condition)
         .setThenStatement(transformedCatchBody)
@@ -166,7 +159,7 @@ public class NormalizeCatchClauses extends NormalizationPass {
         typeDescriptors.stream()
             .map(
                 t ->
-                    InstanceOfExpression.newBuilder()
+                    InstanceOfExpression.builder()
                         .setExpression(exceptionVariable.createReference())
                         .setTestTypeDescriptor(t)
                         .build())
@@ -181,17 +174,17 @@ public class NormalizeCatchClauses extends NormalizationPass {
     }
 
     ExpressionStatement assignment =
-        VariableDeclarationExpression.newBuilder()
+        VariableDeclarationExpression.builder()
             .addVariableDeclaration(
                 catchVariable,
-                JsDocCastExpression.newBuilder()
+                JsDocCastExpression.builder()
                     .setExpression(exceptionVariable.createReference())
                     .setCastTypeDescriptor(catchVariable.getTypeDescriptor())
                     .build())
             .build()
             .makeStatement(catchBody.getSourcePosition());
 
-    return Block.newBuilder()
+    return Block.builder()
         .setSourcePosition(catchBody.getSourcePosition())
         .addStatement(assignment)
         .addStatements(catchBody.getStatements())
