@@ -37,8 +37,8 @@ public class NormalizeJsAwaitMethodInvocations extends NormalizationPass {
               checkArgument(
                   methodCall.getArguments().size() == 1,
                   "await should only have a single argument");
-              return JsAwaitExpression.newBuilder()
-                  .setExpression(methodCall.getArguments().get(0))
+              return JsAwaitExpression.builder()
+                  .setExpression(methodCall.getArguments().getFirst())
                   .setTypeDescriptor(methodCall.getTypeDescriptor())
                   .build();
             }
